[package]
name = "twine-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio.workspace = true
zbus.workspace = true
otbr-client = { path = "../otbr-client" }
