[package]
name = "twine-codec"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["zbus", "alloc"]
alloc = ["hex/alloc"]
zbus = ["dep:zbus", "serde"]
serde = ["dep:serde"]

[dependencies]
bitflags.workspace = true
bitfield.workspace = true
bytes.workspace = true
hex = { workspace = true }
log.workspace = true
thiserror.workspace = true
twine-macros = { path = "../twine-macros" }
twine-tlv = { path = "../twine-tlv", default-features = false }
typed-builder.workspace = true
serde = { workspace = true, optional = true }
zbus = { workspace = true, optional = true }
getrandom = "0.3"

[dev-dependencies]
env_logger.workspace = true
insta.workspace = true
rand = { version = "0.9.2" }
