[package]
name = "twine-tlv"
version.workspace = true
authors.workspace = true
description = "A library for working with a collection of TLVs"
edition.workspace = true

[features]
std = []
alloc = []

[dependencies]
bytes.workspace = true
faster-hex = { git = "https://github.com/jdswensen/faster-hex.git", default-features = false, rev = "9e7511933beacf7b37da63e733750a4c3baa405c" }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
insta.workspace = true
twine-rs-macros = { version = "0.1", path = "../twine-macros" }
