[package]
name = "twine-tlv"
version.workspace = true
authors.workspace = true
description = "A library for working with a collection of TLVs"
edition.workspace = true

[features]
std = []
alloc = []

[dependencies]
bytes.workspace = true
faster-hex-thiserror = { version = "0.10.1", default-features = false }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
insta.workspace = true
twine-rs-macros = { version = "0.1", path = "../twine-macros" }
